# fast_api_practice

./: .gitignore  Dockerfile  README.md  compose.yml  main.py  pyproject.toml  urls.db
.github/workflows/: ci.yml
app/: config.py  main.py
app/core/: security.py
app/db/: database.py  session.py
app/models/: models.py
app/routes/: auth.py  url.py
app/schemas/: schemas.py
core/: security.py
db/: database.py
models/: models.py
routes/: url.py
schemas/: schemas.py
tests/: conftest.py  test_auth.py  test_routes.py
